# rules_nsis

./: .bazelignore  .bazelrc  .gitignore  BUILD.bazel  LICENSE  MODULE.bazel  README.md  flake.nix  go.mod  go.sum
.bcr/: metadata.template.json  presubmit.yml
.github/workflows/: ci.yml  publish.yml  release.yml  release_prep.sh
docs/: BUILD.bazel  defs.md  extensions.md  toolchain.md
nsis/: BUILD.bazel  NSIS.InstallOptions.template.nsi  NSIS.InstallOptions.template.nsi.old  NSIS.template.nsi  defs.bzl  extensions.bzl  requirements.txt  toolchain.bzl  toolchains.bzl
nsis/buildtemplate/: BUILD.bazel  main.go
nsis/private/: BUILD.bazel  defs.bzl  defs2.bzl  dirrule.bzl  extensions.bzl  gomplate.bzl  platforms.bzl  transitions.bzl
nsis/private/render/: BUILD.bazel  stamp_data.py
nsis/private/templates/: BUILD.bazel  NSIS.InstallOptions.template.ini  NSIS.template.nsi
nsis/toolchain/: BUILD.bazel  requirements_lock_txt  toolchains.bzl
tests/: BUILD.bazel  defs.bzl  nsis_install_test.py  requirements_lock_txt
tests/testdata/: BUILD.bazel
tests/usagetests/: BUILD.bazel  MODULE.bazel  bazel-bin  bazel-out  bazel-testlogs  bazel-usagetests
tools/: workspace_status.sh
tools/rules_nsis/: MODULE.bazel
tools/rules_nsis/nsis/: BUILD.bazel  NSIS.template.nsi.old  defs.bzl  dirrule.bzl  extensions.bzl  toolchains.bzl
tools/rules_nsis/nsis/buildtemplate/: BUILD.bazel
