module(
    name = "rules_nsis",
)

############################
# SETUP GOLANG
############################
bazel_dep(name = "rules_go", version = "0.60.0")

# Setup SDK
go_sdk = use_extension("@rules_go//go:extensions.bzl", "go_sdk")
go_sdk.download(
    name = "go_sdk",
    version = "1.26.2",
)
use_repo(go_sdk, "go_sdk")

register_toolchains("@go_sdk//:all")

############################
# SETUP GAZELLE
############################
bazel_dep(name = "gazelle", version = "0.50.0")

# Setup Dependencies
go_deps = use_extension("@gazelle//:extensions.bzl", "go_deps")
go_deps.from_file(go_mod = "//:go.mod")

# Make repos available to modules
inject_repo(go_deps, "rules_go")

inject_repo(go_deps, "gazelle")

use_repo(
    go_deps,
)
