load("@bazel_lib//:bzl_library.bzl", "bzl_library")

package(default_visibility = ["//visibility:public"])

bzl_library(
    name = "defs",
    srcs = ["defs.bzl"],
    visibility = ["//visibility:public"],
    deps = [
        "@bazel_lib//lib:stamping",
        "//nsis/private:defs.bzl",
        "//nsis/private:transitions.bzl",
    ],
)

bzl_library(
    name = "extensions",
    srcs = ["extensions.bzl"],
    visibility = ["//visibility:public"],
    deps = [
        "@bazel_tools//tools/build_defs/repo:cache.bzl",
        "@bazel_tools//tools/build_defs/repo:utils.bzl",
        "@bazel_tools//tools/build_defs/repo:http.bzl",
        "//nsis/private:extensions.bzl",
        "//nsis/private:dirrule.bzl",
        "//nsis:toolchain.bzl",
    ],
)

bzl_library(
    name = "toolchain",
    srcs = ["toolchain.bzl"],
    visibility = ["//visibility:public"],
    deps = [
        "//nsis/toolchain:toolchains.bzl",
    ],
)
