load("//tests:defs.bzl", "nsis_installer_test")
load("//nsis:defs.bzl", "nsis_component", "nsis_component_group", "nsis_installer")
load("@rules_python//python:pip.bzl", "compile_pip_requirements")

package(default_visibility = ["//visibility:private"])

compile_pip_requirements(
    name = "requirements",
    src = "requirements.txt",
    requirements_txt = "requirements_lock_txt",
)

filegroup(
    name = "nsis_files",
    srcs = [
        "//tests/testdata:README.md",
    ],
)

nsis_component(
    name = "minimal_component",
    srcs = [":nsis_files"],
    selection_mode = "default",
)

nsis_installer(
    name = "minimal_installer",
    components = [":minimal_component"],
    product = "Minimal Installer",
    product_path = "Minimal Installer",
)

nsis_component(
    name = "minimal_component_depsA",
    srcs = [":nsis_files"],
    selection_mode = "optional",
)

nsis_component(
    name = "minimal_component_depsB",
    srcs = [":nsis_files"],
    dependencies = [
        ":minimal_component",
        ":minimal_component_depsA",
    ],
    selection_mode = "optional",
)

nsis_component(
    name = "minimal_component_depsC",
    srcs = [":nsis_files"],
    dependencies = [
        ":minimal_component_depsB",
    ],
    selection_mode = "optional",
)

nsis_installer(
    name = "minimal_installer_deps",
    components = [
        ":minimal_component",
        ":minimal_component_depsA",
        ":minimal_component_depsB",
        ":minimal_component_depsC",
    ],
    product = "Minimal Installer Deps",
    product_path = "Minimal Installer Deps",
)

nsis_installer_test(
    name = "minimal_installer_test_deps",
    installer = ":minimal_installer_deps",
    expected_installer_name = "Minimal Installer Deps Setup.exe",
    expected_files = [
        "README.md",
    ],
    expected_product_path = "Minimal Installer Deps",
)

nsis_component(
    name = "single_service_component",
    service = True,
    service_executable = "//tests/testdata:README.md",
    service_start_type = "auto",
    selection_mode = "required",
    display_name = "README Service",
    description = "README Service Description",
    install_categories = ["Full", "Typical", "Minimal"],
    srcs = [":nsis_files"],
)

nsis_installer(
    name = "single_service_installer",
    product = "Single Service Installer",
    product_path = "SSI",
    vendor = "Company Department",
    vendor_path = "Company\\Department",
    description = "Description",
    version = "0.0.0.1",
    execution_level = "admin",
    components = [
        ":single_service_component",
    ],
    install_categories = [
        "Full",
        "Typical",
        "Minimal",
    ],
)

nsis_installer_test(
    name = "single_service_test",
    installer = ":single_service_installer",
    expected_installer_name = "Company Department Single Service Installer Setup.exe",
    expected_files = [
        "README.md",
    ],
    expected_product_path = "SSI",
    expected_vendor_path = "Company\\Department",
    expected_services = {
        "single_service_component": {
            "start_type": "auto",
            "display_name": "Company Department Single Service Installer README Service",
            "description": "README Service Description",
            "executable": "README.md",
            "args": [],
        },
    },
)

nsis_component_group(
    name = "minimal_group",
    components = [
        ":minimal_component"
    ],
)

nsis_installer(
    name = "minimal_installer_with_group",
    components = [":minimal_group"],
    product = "Minimal Installer Group",
    product_path = "Minimal Installer Group",
)

nsis_installer_test(
    name = "minimal_installer_with_group_test",
    installer = ":minimal_installer_with_group",
    expected_installer_name = "Minimal Installer Group Setup.exe",
    expected_files = [
        "README.md",
    ],
    expected_product_path = "Minimal Installer Group",
)

nsis_component(
    name = "minimal_component_with_dir",
    directory = "Component",
    srcs = [":nsis_files"],
)

nsis_installer(
    name = "minimal_installer_with_dir",
    components = [":minimal_component_with_dir"],
    product = "Minimal Installer Dir",
    product_path = "Minimal Installer Dir",
)

nsis_installer_test(
    name = "minimal_installer_with_dir_test",
    installer = ":minimal_installer_with_dir",
    expected_installer_name = "Minimal Installer Dir Setup.exe",
    expected_files = [
        "Component\\README.md",
    ],
    expected_product_path = "Minimal Installer Dir",
)

nsis_component(
    name = "ssc_with_group_and_dir_component",
    directory = "Component",
    service = True,
    service_executable = "//tests/testdata:README.md",
    service_start_type = "auto",
    selection_mode = "required",
    display_name = "README Service GrpDir",
    description = "README Service Description",
    install_categories = ["Full", "Typical", "Minimal"],
    srcs = [":nsis_files"],
)

nsis_component_group(
    name = "ssc_with_group_and_dir_group",
    components = [
        ":ssc_with_group_and_dir_component"
    ],
)

nsis_installer(
    name = "ssc_with_group_and_dir",
    product = "Single Service Installer GrpDir",
    product_path = "SSI",
    vendor = "Company Department",
    vendor_path = "Company\\Department",
    description = "Description",
    version = "0.0.0.1",
    execution_level = "admin",
    components = [
        ":ssc_with_group_and_dir_group",
    ],
    install_categories = [
        "Full",
        "Typical",
        "Minimal",
    ],
)

nsis_installer_test(
    name = "ssc_with_group_and_dir_test",
    installer = ":ssc_with_group_and_dir",
    expected_installer_name = "Company Department Single Service Installer GrpDir Setup.exe",
    expected_files = [
        "Component\\README.md",
    ],
    expected_product_path = "SSI",
    expected_vendor_path = "Company\\Department",
    expected_services = {
        "ssc_with_group_and_dir_component": {
            "start_type": "auto",
            "display_name": "Company Department Single Service Installer GrpDir README Service GrpDir",
            "description": "README Service Description",
            "executable": "Component\\README.md",
            "args": [],
        },
    },
)
