load("@rules_go//go:def.bzl", "go_binary", "go_library")

go_library(
    name = "buildtemplate_lib",
    srcs = ["main.go"],
    importpath = "github.com/EliSauder/rules_nsis/nsis/buildtemplate",
    visibility = ["//visibility:private"],
)

go_binary(
    name = "buildtemplate",
    embed = [":buildtemplate_lib"],
    visibility = ["//visibility:public"],
)
