load("@rules_nsis//nsis:defs.bzl", "nsis_component", "nsis_component_group", "nsis_installer")
load("@rules_nsis//tests:defs.bzl", "nsis_installer_test")

nsis_component(
    name = "minimal_component",
    srcs = ["test.file"],
    selection_mode = "default",
)

nsis_installer(
    name = "minimal_installer",
    components = [":minimal_component"],
    product = "Minimal Installer",
    product_path = "Minimal Installer",
)
